# GesturePuck

./: .gitignore  README.md  platformio.ini  server.py
App/: GesturePuck.spec  auto  lidar_gesture_studio.py  main.py  pyproject.toml
App/engine/: active_app.py  bluetooth_spp.py  gesture_engine.py  macro_runner.py  mappings.json  mappings.py  packs.py
App/ui/: pack_panel.py  review_dialog.py  tkinter_ui.py
Server/: .dockerignore  Dockerfile  docker-compose.yml  init.sql  pyproject.toml  server.py
Server/app/: main.py
Server/app/engine/: mappings.json  mappings.py
Server/app/ui/: tkinter_ui.py
Server/app_temp/: bluetooth_spp.py  macro_runner.py  main.py  mappings.json
Server/static/: style.css
Server/templates/: gestures.html  gestures_me.html  index.html  index_me.html  settings.html
app/: bluetooth_spp.py  macro_runner.py  main.py  mappings.json  mappings.py  requirements.txt
esp32/: .gitignore  platformio.ini
esp32/src/: main.cpp
src/: main.cpp
static/: style.css
templates/: login.html
