[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=3.0.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "psutil>=7.2.2",
    "py-bt>=1.2.1",
    "pyinstaller>=6.20.0",
    "pynput>=1.8.1",
    "pyserial>=3.5",
]
