[project]
name = "gesturepuck"
version = "0.1.0"
description = "Gesture-to-macro bridge for ESP32 dual-ToF sensor puck"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "bleak>=0.22.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "pynput>=1.7.6",
    "pyserial>=3.5",

    "pywin32>=306; sys_platform == 'win32'",
    "pyobjc-framework-Cocoa>=9.2; sys_platform == 'darwin'",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "main.py",
    "lidar_gesture_studio.py",
    "ui",
    "engine",
    "mappings.json",
]